Misc UI fixes Aug 25 (#448)
* #439 Fix WKT validation code

* #371 reduce repetitive "list" instances

* Fix for 10000 max records on list details view

* #284 Added Freshdesk widget

* #284 CSS fix to prevent FD widget overlapping content

* List details improvements

- Icons consistent with home page
- keep like functions together
- improve tooltips
- add i18n labels

* #343 Allow login to work with CAS

Fix as suggested by Jack. Logout error also fixed by adding `response_type: 'code'`

* Update en.json

--- a/lists-ui/src/views/Admin/index.module.css
+++ b/lists-ui/src/views/Admin/index.module.css
@@ -6,7 +6,7 @@
 }
 
 .speciesHeader {
-    padding: 10px 20px 15px 20px;
+    padding: 10px 30px 15px 20px;
     z-index: 0;
     background-repeat: no-repeat;
     background-position: right -10px top -20px;
